--- a/css/styleeducacao.css
+++ b/css/styleeducacao.css
@@ -70,3 +70,21 @@ a {
     margin: 10px;
     padding: 10px;
 }
+.click {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 5px 6px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    display:inline;
+    height:10px;
+}
+.like {
+    display:inline;
+    height:10px;
+    border: none;
+    font-size: 20px;
+
+}
