--- a/css/styleprincipal.css
+++ b/css/styleprincipal.css
@@ -65,3 +65,21 @@ a {
     box-shadow: 0px 0px 5px black;
     margin: 10px;
 }
+.click {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 5px 6px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    display:inline;
+    height:10px;
+}
+.like {
+    display:inline;
+    height:10px;
+    border: none;
+    font-size: 20px;
+
+}
